# helix

./: .dockerignore  .gitignore  ARCHITECTURE.md  CITATION.cff  Makefile  PLAN_LLM_TIER.md  README.md  RESULTS.md  RESUME_NEXT.md  TESTING.md  benchmark_helix.py  benchmark_results.json  cyclonedds_loopback.xml  helix_env.sh
.github/workflows/: ci.yml
benchmark/: fault_detection_benchmark.py
config/: twist_mux.yaml
docs/: CPP_PORT_DESIGN_ANOMALY_DETECTOR.md  DEMO_PLAN_CLOSED_LOOP.md  EVALUATION_PLAN.md  GO2_ATTACHABILITY_UPDATE.md  GO2_HARDWARE_EVIDENCE.md  GO2_HARDWARE_LESSONS.md  HARDWARE_EXPERIMENT_INDEX.md  LIMITATIONS.md  LLAMA_SERVER_JETSON_SETUP.md  PAPER_CLAIMS.md  closed_loop_demo.md  cpp_parity_summary.md
experiments/raw_vs_cpp_rate_monitor/: README.md  bench_cpp.py  publisher.py  publisher_utlidar.py  run.sh  run_cpp_vs_py.sh  subscriber.py
hardware_eval_20260403/: README.md
hardware_eval_20260403/env/: go2_topic_list_20260403_live.txt  helix_git_provenance.txt  jetson_network.txt  jetson_packages.txt  jetson_ros2_nodes.txt  jetson_ros2_topics.txt  jetson_system_info.txt  jetson_tf_sample.txt  jetson_topic_rates.txt  pc_ros2_env.txt  pc_system_info.txt  provenance_summary.json
hardware_eval_20260403/notes/: perturbation_feasibility.md  scenario_A_protocol.md  scenario_B_protocol.md  scenario_C_protocol.md  scenario_D_protocol.md
hardware_eval_20260403/results/: attachability_matrix.json  bag_rate_analysis_5min.json  bag_rate_analysis_comparison.json  bag_rate_analysis_cross_3bags.json  bag_rate_analysis_single.json  benchmark_comparison.json  cross_device_latency.txt  helix_overhead_nodes_only.json  helix_overhead_with_adapter.json  jetson_benchmark_results.txt  jetson_resource_baseline.txt  jetson_vs_pc_benchmarks.json  pc_benchmark_results.txt  resource_overhead_analysis.txt
hardware_eval_20260406/: ARCHITECTURE.md  README.md  RESULTS.md  benchmark_helix.py
hardware_eval_20260406/bags/: extended_5min_sidecar.json  helix_adapter_session_sidecar.json  helix_faults_session_sidecar.json  perturbation_rate_load_sidecar.json  perturbation_rosout_inject_sidecar.json
hardware_eval_20260406/docs/: CONTRIBUTIONS.md  EVALUATION_PLAN.md  GO2_ATTACHABILITY_UPDATE.md  GO2_HARDWARE_EVIDENCE.md  GO2_HARDWARE_LESSONS.md  GO2_TOPIC_ANALYSIS.md  HARDWARE_EXPERIMENT_INDEX.md  LIMITATIONS.md  PAPER_CLAIMS.md  PAPER_POSITIONING.md
hardware_eval_20260406/env/: diagnostics_sample.txt  git_workspace_info.txt  jetson_system_info.txt  network_topology.txt  pc_system_info.txt  provenance_summary.json  ros2_node_list.txt  ros2_service_list.txt  ros2_topic_list_typed.txt  rosout_sample.txt  topic_rates.txt
hardware_eval_20260406/logs/: bag_verification.txt
hardware_eval_20260406/notes/: SESSION_NOTES.md
hardware_eval_20260406/results/: bag_rate_analysis_5min_20260406.json  benchmark_session_comparison.md  cross_session_rate_comparison.json  helix_overhead_with_adapter_20260406.json  jetson_baseline_resources_20260406.txt  jetson_benchmark_20260406.txt  jetson_dds_latency_20260406.txt  jetson_log_parser_20260406.txt  jetson_realistic_anomalies_20260406.txt  jetson_resources_during_benchmark.txt
hardware_eval_20260414/: run_jetson_persistent_30min.sh  run_jetson_persistent_30min_v3.sh
hardware_eval_20260416/: HANDOFF_2026-04-17.md  NEXT_STEPS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  SUMMARY.md
launch/: helix_sim_closed_loop.launch.py
results/: attachability_matrix.json  diagnostics_mode_matrix.json  e2e_latency_results.json  ground_truth_injection.json  log_parser_results.json  realistic_anomaly_results.json  standalone_benchmark.md
scripts/: attachability_matrix.py  measure_helix_overhead.py  passive_adapter.py  profile_cpp_rss.py
src/helix_adapter/: package.xml  setup.cfg  setup.py
src/helix_adapter/helix_adapter/: _metrics.py  json_parse.py  json_state_parser.py  pose_drift.py  pose_drift_monitor.py  rate_window.py  topic_rate_monitor.py
src/helix_adapter/test/: conftest.py  test_json_parse.py  test_json_state_parser.py  test_pose_drift.py  test_pose_drift_monitor.py  test_rate_window.py  test_topic_rate_monitor.py
src/helix_adapter_cpp/: CMakeLists.txt  package.xml
src/helix_adapter_cpp/include/helix_adapter_cpp/: rate_window.hpp
src/helix_adapter_cpp/src/: rate_window.cpp  topic_rate_monitor_node.cpp
src/helix_adapter_cpp/test/: test_rate_window.cpp
src/helix_bringup/: package.xml  (+1 more)
src/helix_dashboard/: package.xml  setup.cfg  setup.py
src/helix_dashboard/helix_dashboard/: api_server.py  dashboard_node.py
src/helix_dashboard/helix_dashboard/static/: index.html
src/helix_dashboard/test/: test_api_server.py
src/helix_diagnosis/: package.xml  setup.cfg  setup.py
src/helix_diagnosis/helix_diagnosis/: context_buffer.py  diagnosis_node.py  rules.py
src/helix_diagnosis/test/: conftest.py  test_context_buffer.py  test_diagnosis_node.py  test_rules.py
src/helix_llm/: package.xml  setup.cfg  setup.py
src/helix_llm/helix_llm/: context_builder.py  llm_advisor.py  ollama_client.py
src/helix_llm/test/: test_context_builder.py  test_ollama_client.py
src/helix_msgs/: CMakeLists.txt
src/helix_msgs/msg/: LLMDiagnosis.msg  RecoveryAction.msg  RecoveryHint.msg
src/helix_msgs/srv/: GetContext.srv
src/helix_recovery/: package.xml  setup.cfg  setup.py
src/helix_recovery/helix_recovery/: action_executor.py  recovery_node.py  recovery_planner.py  state_db.py  verification_loop.py
src/helix_recovery/test/: conftest.py  test_action_executor.py  test_recovery_node.py  test_recovery_planner.py  test_state_db.py
src/helix_sensing_cpp/: CMakeLists.txt  package.xml
src/helix_sensing_cpp/config/: helix_params.yaml
src/helix_sensing_cpp/include/helix_sensing_cpp/: anomaly_detector_node.hpp  rolling_stats.hpp
src/helix_sensing_cpp/launch/: anomaly_detector.launch.py
src/helix_sensing_cpp/src/: anomaly_detector_node.cpp
src/helix_sensing_cpp/test/: test_anomaly_detector_node.cpp  test_rolling_stats.cpp
tests/: test_adapter_migration.py  test_attachability.py  test_docs_consistency.py  test_passive_adapter.py  test_twist_mux_config.py
(+130 files in other folders)
