<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helix_dashboard</name>
  <version>0.1.0</version>
  <description>HELIX Phase 4: real-time web dashboard for fault/recovery visualization.</description>
  <maintainer email="dev@helix.local">HELIX Dev</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>helix_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
